k8s/create-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-go-create
  namespace: create-books
spec:
  replicas: 2
  selector:
    matchLabels:
      app: p-go-create
  template:
    metadata:
      labels:
        app: p-go-create
    spec:
      containers:
        - name: p-go-create
          image: gabrielagg07/create-book:v2025.05.19-V1
          ports:
            - containerPort: 8080
