k8s/create-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p-go-create-service
  namespace: create-books
spec:
  selector:
    app: p-go-create
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
