k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p-go-create-ingress
  namespace: create-books
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: centralix.local
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: p-go-create-service
                port:
                  number: 80
